<resources>
    <string name="app_name">Engage</string>
    <string name="sign_in">Sign-in</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="to_register_label"><u>I don\'t have an account yet.</u></string>
    <string name="email">Email</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_hint">Confirm Password</string>
    <string name="register_button">REGISTER</string>
    <string name="register_to_login"><u>I already have an account</u></string>
    <string name="register_label">Sign-up</string>
    <string name="sign_up">Sign-up</string>
    <string name="success">Success!</string>
    <string name="go_back_to_login"><u>Go back to Login</u></string>
    <string name="success_illustration_description">Three people jumping in excitement</string>
    <string name="menu_bar_title">FVOZ Engage</string>
    <string name="seminars_and_events_bar_title">Seminars and Events</string>
    <string name="praying_people">Praying people</string>
    <string name="request_desc">A person completing a form</string>
    <string name="church_projects_desc">A picture of people managing stuff</string>
    <string name="sermon_desc">A picture of a woman standing in front of many people</string>
    <string name="event_photo_description">Photo of the Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Date</string>
    <string name="sermon_title">Sermons</string>
    <string name="card_sermon_title">Sermon Title</string>
    <string name="card_sermon_duration">Duration</string>
    <string name="card_sermon_short_url"> URL goes here though its invisible, you are not supposed to see this </string>
    <string name="request_form_title">Request Form</string>
    <string name="request_note">Request Note</string>
    <string name="request_submit_button_label">Send Request</string>
    <string name="request_type_input_label">Request Type</string>
    <string name="request_type_input_hint">e.g; “Marriage Counselling, License Renewal”</string>
    <string name="request_success_title">Request<br />Success!</string>
    <string name="request_redirect_to_menu"><u>Go back to Menu</u></string>
    <string name="church_projects_bar_title">Church Projects</string>
    <string name="sermon_view_page_title_text">Sermon Title Here</string>
    <string name="sermon_view_page_bar_title"> Sermon Name </string>
    <string name="sermon_view_page_date"> Date Here </string>
    <string name="sermon_view_page_description"> Description here </string>
    <string name="sermon_view_page_url_downloadable"> Download </string>
    <string name="events_view_page_title_text">Event Title Here</string>
    <string name="events_view_page_bar_title"> Event Name </string>
    <string name="events_view_page_date">Date Here</string>
    <string name="events_view_page_description"> Description here </string>
    <string name="events_view_page_reminder"> Remind Me </string>
    <string name="events_view_page_photo_description"> Stock photo </string>
    <string name="project_view_page_bar_title">  Project Name Here </string>
    <string name="project_view_page_photo_description"> This is where you put the Project\'s thumbnail </string>
    <string name="project_view_page_title"> Title here </string>
    <string name="project_view_page_date">  Date Here </string>
    <string name="project_view_page_description"> Description here </string>
    <string name="user_setting_page_bar_title"> Settings </string>
    <string name="user_setting_page_profile_photo_description"> Profile Picture of the User </string>
    <string name="user_setting_page_full_name"> Full-name of the User</string>
    <string name="user_setting_page_email">Email of the User</string>
    <string name="user_setting_page_divider_title"> Coming soon... </string>
    <string name="user_setting_page_full_name_editable"> Full-name editable </string>
    <string name="user_setting_page_email_editable"> Email editable </string>
    <string name="user_setting_page_password_editable"> Password editable </string>
    <string name="user_setting_page_save"> Logout </string>
    <string name="splash_bg_desc"> Photo of the FVOZ Church </string>
    <string name="splash_logo_desc"> Logo of the FVOZ Engage App </string>
    <string name="login_logo_desc"> Light-themed Official Logo of FVOZ Engage App </string>
    <string name="menu_title_sermons"> Sermons </string>
    <string name="menu_title_projects"> Projects </string>
    <string name="menu_title_events"> Events </string>
    <string name="menu_title_settings"> Settings </string>
    <string name="menu_title_requests"> Requests </string>
    <string name="drawer_status_open">Open</string>
    <string name="drawer_status_close">Close</string>
</resources>