<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash.RegistrationSuccessSplash">

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="446dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="41dp" />

        <TextView
            android:id="@+id/RegistrationSuccessLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/success"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="259dp"
            android:layout_gravity="center"
            android:contentDescription="@string/success_illustration_description"
            app:srcCompat="@drawable/registration_sucess_illustration" />

        <TextView
            android:id="@+id/SuccessToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/proza_libre"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/go_back_to_login"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="145dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>