<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/SermonPhoto"
            android:layout_width="297dp"
            android:layout_height="102dp"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/event_photo_description"
            android:foregroundGravity="center"
            android:padding="5dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/seminars_and_events_image"
            tools:srcCompat="@drawable/seminars_and_events_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/EventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/event_title"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/EventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proza_libre"
                android:padding="5dp"
                android:text="@string/event_description"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/EventDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="invisible"
                tools:visibility="invisible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>